<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="8dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Gallery.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_ai_desc_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="2"
            android:maxLines="6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Gallery.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_ai_tags_hint"
        app:helperText="@string/edit_ai_tags_help">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="4"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
